# fs-watcher

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
benches/: bench_copy.py  bench_hash.py  bench_walk.py
docs/: architecture.md  changelog.md  contributing.md  getting-started.md  index.md
docs/api/: copy.md  dedup.md  diff.md  disk-usage.md  exceptions.md  hash.md  index.md  rename.md  search.md  snapshot.md  sync.md  walk.md  watch.md
docs/assets/: extra.css
docs/guides/: copy-move.md  dedup.md  diff.md  disk-usage.md  hash.md  rename.md  search.md  snapshot.md  sync.md  walk.md  watch.md
py_src/pyfs_watcher/: __init__.py  _core.pyi  errors.py  types.py
python/fs_watcher/: __init__.py  _core.pyi  watch.py
src/: copy.rs  dedup.rs  du.rs  errors.rs  hash.rs  lib.rs  rename.rs  search.rs  snapshot.rs  sync.rs  utils.rs  walk.rs  watch.rs
tests/: conftest.py  test_copy.py  test_dedup.py  test_diff.py  test_du.py  test_hash.py  test_rename.py  test_search.py  test_snapshot.py  test_sync.py  test_walk.py  test_watch.py
