[package]
name = "fs_watcher"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.77"
readme = "README.md"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }

# Parallel directory walk
jwalk = "0.8"

# Hashing
blake3 = "1.8"
sha2 = "0.10"
digest = "0.10"

# Parallelism
rayon = "1.10"

# File watching (notify-debouncer-full re-exports notify 6.x)
notify-debouncer-full = "0.3"

# File copy with progress
fs_extra = "1.3"

# Memory-mapped I/O
memmap2 = "0.9"

# Path normalization (Windows UNC paths)
dunce = "1.0"

# Rust log -> Python logging bridge
log = "0.4"
pyo3-log = "0.11"

# Channels for callback pattern
crossbeam-channel = "0.5"

# Glob pattern matching
globset = "0.4"

# Cross-device rename detection
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
