[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "pyfs_watcher"
requires-python = ">=3.9"
description = "Rust-powered filesystem toolkit: fast walk, parallel hashing, bulk copy, file watching, deduplication, content search, directory diff/sync, snapshots, disk usage, and batch rename."
version = "0.2.0"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Pratyush Sharma" },
]
keywords = ["filesystem", "walk", "hash", "copy", "watch", "dedup", "search", "diff", "sync", "snapshot", "rename", "rust", "fast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/pratyush618/pyfs-watcher"
Issues = "https://github.com/pratyush618/pyfs-watcher/issues"
Documentation = "https://pratyush618.github.io/pyfs-watcher/"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "maturin>=1.8",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
docs = [
    "zensical",
]

[tool.maturin]
python-source = "py_src"
module-name = "pyfs_watcher._core"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
mypy_path = "py_src"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "benches.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
